# astrosim

./: .gitignore  Cargo.toml  README.md
astrosim_cli/: Cargo.toml
astrosim_cli/src/: lib.rs  main.rs
astrosim_gui/: Cargo.toml
astrosim_gui/src/: main.rs
astrosim_lib/: Cargo.toml
astrosim_lib/src/: adaptive.rs  brute_force.rs  bruteforce.rs  error.rs  errormessage.rs  forces.rs  image.rs  lib.rs  outputs.rs  partial_force.rs  particle.rs  prelude.rs  render.rs  result.rs  sim_with_output.rs  simulation.rs  stepper.rs  universe.rs  verlet.rs
astrosim_lib/src/math/: dvec2.rs  fvec2.rs  gvec2.rs  mod.rs  util.rs
errors/: Cargo.toml
errors/src/: errormessage.rs  lib.rs
inputs/: asteroids.csv  asteroids.go  asteroids.sh  chaos.csv  comet.csv  jupiter.csv  keppler.csv  kirkwood_gaps.csv  kirkwood_gaps.sh  onebody.csv  simple.csv  sun.csv  twobody.csv
opengl_libs/: Cargo.toml
opengl_libs/just_a_window/: Cargo.toml
opengl_libs/just_a_window/src/: lib.rs  main.rs
